vendor/sqlx-0.5.2/tests/ui/postgres/issue_30.stderr
error: column name "\'1" is invalid: "\'1" is not a valid Rust identifier
 --> $DIR/issue_30.rs:2:17
  |
2 |     let query = sqlx::query!("select 1 as \"'1\"");
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
