vendor/sqlx-0.5.2/tests/ui/postgres/issue_30.rs
fn main() {
    let query = sqlx::query!("select 1 as \"'1\"");
}
